compiler/e2e/test/snapshot/ir/expression/cast/invalid_type_cast/main.pnx
public struct Adt:
    pass


public function main():
    let a = 2
    let b = a as Adt
    
    let c = Adt{}
    let d = c as int32